src/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program_rule' -> . program_rule [ # ]
## Transitions:
-- On WHILE shift to state 1
-- On TYPE shift to state 93
-- On RETURN shift to state 121
-- On LET shift to state 125
-- On IF shift to state 145
-- On ID shift to state 148
-- On FUN shift to state 158
-- On CONT shift to state 169
-- On BREAK shift to state 170
-- On BIND shift to state 171
-- On while_loop shift to state 183
-- On udt_def shift to state 184
-- On program_rule shift to state 217
-- On if_stmt shift to state 185
-- On func_def shift to state 186
-- On func_call shift to state 187
-- On declaration shift to state 188
-- On control_flow shift to state 189
-- On block_list shift to state 218
-- On block shift to state 192
-- On assignment shift to state 194
## Reductions:
-- On EOF
--   reduce production block_list ->

State 1:
## Known stack suffix:
## WHILE
## LR(1) items:
while_loop -> WHILE . expr LBRACE block_list RBRACE [ WHILE TYPE RETURN RBRACE LET IF ID FUN EOF CONT BREAK BIND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 91
## Reductions:

State 2:
## Known stack suffix:
## UNIT
## LR(1) items:
expr -> UNIT . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> UNIT

State 3:
## Known stack suffix:
## SLIT
## LR(1) items:
expr -> SLIT . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> SLIT

State 4:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 90
## Reductions:

State 5:
## Known stack suffix:
## MATCH
## LR(1) items:
expr -> MATCH . expr LBRACE case_list RBRACE [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 73
## Reductions:

State 6:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr -> LPAREN . expr RPAREN [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
tuple -> LPAREN . list_elements RPAREN [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On list_elements shift to state 69
-- On expr shift to state 71
## Reductions:
-- On RPAREN
--   reduce production list_elements ->

State 7:
## Known stack suffix:
## LITERAL
## LR(1) items:
expr -> LITERAL . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> LITERAL

State 8:
## Known stack suffix:
## LBRACKET
## LR(1) items:
src_parser_list -> LBRACKET . list_elements RBRACKET [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On list_elements shift to state 64
-- On expr shift to state 66
## Reductions:
-- On RBRACKET
--   reduce production list_elements ->

State 9:
## Known stack suffix:
## INCR
## LR(1) items:
expr -> INCR . expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 63
## Reductions:

State 10:
## Known stack suffix:
## ID
## LR(1) items:
expr -> ID . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> ID . LBRACKET expr RBRACKET [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> ID . DOT ID [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
udt_instance -> ID . LBRACE udt_contents RBRACE [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On LBRACKET shift to state 11
-- On LBRACE shift to state 52
-- On DOT shift to state 61
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> ID
** Conflict on LBRACE

State 11:
## Known stack suffix:
## ID LBRACKET
## LR(1) items:
expr -> ID LBRACKET . expr RBRACKET [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 50
## Reductions:

State 12:
## Known stack suffix:
## FLIT
## LR(1) items:
expr -> FLIT . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> FLIT

State 13:
## Known stack suffix:
## DECR
## LR(1) items:
expr -> DECR . expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 19
## Reductions:

State 14:
## Known stack suffix:
## CLIT
## LR(1) items:
expr -> CLIT . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> CLIT

State 15:
## Known stack suffix:
## BLIT
## LR(1) items:
expr -> BLIT . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> BLIT

State 16:
## Known stack suffix:
## udt_instance
## LR(1) items:
expr -> udt_instance . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> udt_instance

State 17:
## Known stack suffix:
## tuple
## LR(1) items:
expr -> tuple . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> tuple

State 18:
## Known stack suffix:
## src_parser_list
## LR(1) items:
expr -> src_parser_list . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> src_parser_list

State 19:
## Known stack suffix:
## DECR expr
## LR(1) items:
expr -> expr . PLUS expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . MINUS expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . TIMES expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . DIVIDE expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . MODULO expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . EXPONENT expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . INCR [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . DECR [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> DECR expr . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . BEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . NEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . LT expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . LEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . GT expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . GEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . AND expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . OR expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On TIMES shift to state 20
-- On PLUS shift to state 24
-- On OR shift to state 32
-- On NEQ shift to state 34
-- On MODULO shift to state 22
-- On MINUS shift to state 36
-- On LT shift to state 38
-- On LEQ shift to state 40
-- On INCR shift to state 26
-- On GT shift to state 42
-- On GEQ shift to state 44
-- On EXPONENT shift to state 27
-- On DIVIDE shift to state 30
-- On DECR shift to state 29
-- On BEQ shift to state 46
-- On AND shift to state 48
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> DECR expr
** Conflict on TIMES PLUS OR NEQ MODULO MINUS LT LEQ INCR GT GEQ EXPONENT DIVIDE DECR BEQ AND

State 20:
## Known stack suffix:
## expr TIMES
## LR(1) items:
expr -> expr TIMES . expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## expr TIMES expr
## LR(1) items:
expr -> expr . PLUS expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . MINUS expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . TIMES expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr TIMES expr . [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . DIVIDE expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . MODULO expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . EXPONENT expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . INCR [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . DECR [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . BEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . NEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . LT expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . LEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . GT expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . GEQ expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . AND expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
expr -> expr . OR expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On MODULO shift to state 22
-- On INCR shift to state 26
-- On EXPONENT shift to state 27
-- On DECR shift to state 29
## Reductions:
-- On WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND
--   reduce production expr -> expr TIMES expr
** Conflict on MODULO INCR DECR

State 22:
## Known stack suffix:
## expr MODULO
## LR(1) items:
expr -> expr MODULO . expr [ WHILE TYPE TIMES SEMI RPAREN RETURN RBRACKET RBRACE PLUS OR NEQ MODULO MINUS LT LET LEQ LBRACE INCR IF ID GT GEQ FUN EXPONENT EOF DIVIDE DECR CONT COMMA BREAK BIND BEQ AND ]
## Transitions:
-- On UNIT shift to state 2
-- On SLIT shift to state 3
-- On NOT shift to state 4
-- On MATCH shift to state 5
-- On LPAREN shift to state 6
-- On LITERAL shift to state 7
-- On LBRACKET shift to state 8
-- On INCR shift to state 9
-- On ID shift to state 10
-- On FLIT shift to state 12
-- On DECR shift to state 13
-- On CLIT shift to state 14
-- On BLIT shift to state 15
-- On udt_instance shift to state 16
-- On tuple shift to state 17
-- On src_parser_list shift to state 18
-- On expr shift to state 23
## Reductions:
